created feature branch

--- a/src/main/java/com/Configuration/com.config.properties
+++ b/src/main/java/com/Configuration/com.config.properties
@@ -1,3 +1,6 @@
 url=https://developer.here.com/documentation
+avivaURL=http://www.aviva.com
 browser=chrome
 browserDriverPath=\\BrowserDrivers\\chromedriver.exe
+
+avivaHomePageTitle=Aviva corporate website - Aviva plc
